# lobot_ros

./: .gitignore  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
lobot_control/: mainpage.dox  manifest.xml
lobot_control/config/: joint_state_controller.yaml  trajectory_control.yaml  xarm_control.yaml
lobot_control/launch/: trajectory_control.launch  xarm_control.launch  xarm_trajectory_control.launch
lobot_demo/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
lobot_demo/launch/: xarm_move_group_interface.launch  xarm_pick_place.launch
lobot_demo/src/: xarm_iksolver.cpp  xarm_move_group_interface.cpp  xarm_pick_place.cpp  xarm_trajectory_plan.cpp
lobot_description/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
lobot_driver/: CMakeLists.txt  mainpage.dox  manifest.xml
lobot_gazebo/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
lobot_hardware_interface/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
lobot_ik/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
lobot_ik/include/xarm_ik/: xarm_ik.h
lobot_ik/include/xarm_pose/: xarm_pose.hpp  xarm_position.hpp  xarm_quaternion.hpp
lobot_ik/launch/: xarm_move_group_demo.launch  xarm_pick_place_demo.launch
lobot_ik/src/: xarm_ik.cpp  xarm_move_group_demo.cpp  xarm_pick_place_demo.cpp
lobot_kinematics/: CMakeLists.txt  package.xml  xarm_kinematics_description.xml
lobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
lobot_xarm/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
(+57 files in other folders)
